[Practica 04]: Implementada familia de clases Sequence

--- a/Practica04/.vscode/settings.json
+++ b/Practica04/.vscode/settings.json
@@ -10,6 +10,7 @@
     "random": "cpp",
     "format": "cpp",
     "system_error": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "ostream": "cpp"
   }
 }
