--- a/Practica04/.vscode/settings.json
+++ b/Practica04/.vscode/settings.json
@@ -11,6 +11,7 @@
     "format": "cpp",
     "system_error": "cpp",
     "variant": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "iostream": "cpp"
   }
 }
